modifications after study hall

--- a/lib/index.html
+++ b/lib/index.html
@@ -11,7 +11,7 @@
   <body>
     <main class="container">
       <div class="top-row row">
-        <div class="letter" data-letter="q">q</div>
+        <div class="letter" class="active" data-letter="q">q</div>
         <div class="letter" data-letter="w">w</div>
         <div class="letter" data-letter="e">e</div>
         <div class="letter" data-letter="r">r</div>
